responsive cover page created

--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,19 @@ a:focus {
 }
 
 .bg-primary {
-    background-color: rgba(245, 229, 185, 1.0)!important;
+    background-color: rgba(245, 229, 185, 1.0) !important;
+}
+.bg-secondary {
+    background-color: rgba(64, 86, 161, 1.0) !important;
+}
+.bg-danger {
+    background-color: rgba(241, 60, 31, 1.0) !important;
 }
 .bg-info {
-    background-color: rgba(215, 153, 34, 1.0)!important;
+    background-color: rgba(215, 153, 34, 1.0) !important;
 }
 .bg-success {
-    background-color: rgba(14, 73, 29, 1.0)!important;
+    background-color: rgba(14, 73, 29, 1.0) !important;
 }
 
 .btn {
@@ -36,26 +42,38 @@ a:focus {
     border-color: #c03018;
 }
 
-.btn-info {
+.btn-secondary {
     background-color: #4056A1;
     border-color: #394d90;
 }
-.btn-info:hover,
-.btn-info:focus {
+.btn-secondary:hover,
+.btn-secondary:focus {
     background-color: #394d90;
     border-color: #334480;
 }
 
-.btn-warning {
+.btn-info {
     color: #FFFFFF;
     background-color: #D79922;
     border-color: #c1891e;
 }
-.btn-warning:hover,
-.btn-warning:focus {
+.btn-info:hover,
+.btn-info:focus {
     color: #FFFFFF;
     background-color: #c1891e;
     border-color: #ac7a1b;
+}
+
+.btn-success {
+    color: #FFFFFF;
+    background-color: #0E491D;
+    border-color: #0E491D;
+}
+.btn-success:hover,
+.btn-success:focus {
+    color: #FFFFFF;
+    background-color: #0E491D;
+    border-color: #0C411A;
 }
 
 .navbar-light .navbar-brand {
@@ -66,4 +84,12 @@ a:focus {
 .navbar-light .navbar-brand:hover,
 .navbar-light .navbar-brand:focus {
     color: #334480;
+}
+
+.cover {
+    background: url(/pics/shutterstock_132293006.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
