--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,14 @@ a:focus {
     background-size: cover;
 }
 
+.about-cover {
+    background: url(/pics/about-us.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .instructors-cover {
     background: url(/pics/stage-lights.jpg) no-repeat right center fixed; 
     -webkit-background-size: cover;
