--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,14 @@ a:focus {
     background-size: cover;
 }
 
+.fees-cover {
+    background: url(/pics/fees.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .courses-banner {
     background: url(/pics/leaves.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
